# Backrooms-Procedural-Engine

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
gui/: AppWindow.cpp  AppWindow.h  MaterialPanel.cpp  MaterialPanel.h  ModelBrowser.cpp  ModelBrowser.h  RoomGeneratorPanel.cpp  RoomGeneratorPanel.h  ViewportWidget.cpp  ViewportWidget.h
include/core/: Basic.h  Camera.h  Component.h  Material.h  MaterialComponent.h  Mesh.h  MeshComponent.h  Model.h  Object.h  Shader.h  Texture.h  Vertex.h
include/utilities/: CreatePlaneMesh.h
renderdoc/config/: defaultrdc.cap
shaders/fragment/: DefaultCeiling.frag  DefaultFloor.frag  DefaultWallpaper.frag  PBR.frag
shaders/vertex/: DefaultFloor.vert  PBR.vert
src/: main.cpp
src/core/: Camera.cpp  Material.cpp  MaterialComponent.cpp  Mesh.cpp  MeshComponent.cpp  Model.cpp  Object.cpp  Shader.cpp  Texture.cpp
src/utilities/: CreatePlaneMesh.cpp
